# Blinko

./: .commitlintrc.js  .editorconfig  .gitignore  BUILD.md  Cargo.toml  MIGRATION.md  README.md  README.zh-CN.md
.specstory/history/: 2025-11-04_07-27Z-系统分析健康提醒工具需求.md
docs/: PROJECT_STRUCTURE.md  README.md
docs/design/: 00-design-principles.md  02-ui-design.md  README.md
docs/development/: 02-code-style.md  03-git-workflow.md  README.md
docs/requirements/: 01-core-requirements.md  02-functional-requirements.md  03-technical-requirements.md  04-ux-requirements.md  05-non-functional-requirements.md  README.md  SUMMARY.md
src/: config.rs  database.rs  detection.rs  main.rs  reminder.rs  tray.rs  window.rs
